--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+  <link rel="stylesheet" href="{{ "/css/matrix_font/matrix_font.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/oldmain.css" | prepend: site.baseurl }}">
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
+  <script src="/javascript/jquery-1.9.1.js"></script>
+  <script src="/javascript/library.js"></script>
+  <script src="/javascript/glyph-stream.js"></script>
+
+  <script src="/javascript/jquery.jquery-scroll.js"></script>
+  <link rel="stylesheet" href="/css/jquery.jquery-scroll.css">
+
 </head>
