Add inline js and style

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,25 @@
   <script src="/javascript/jquery.jquery-scroll.js"></script>
   <link rel="stylesheet" href="/css/jquery.jquery-scroll.css">
 
+  <script type="text/javascript">
+    // Default stream settings
+    var options = {
+        quantity: 5
+      , minSpeed: 30
+      , maxSpeed: 45
+      , minLength: 6
+      , maxLength: 25
+      , minSpriteSpeed: 500
+      , maxSpriteSpeed: 1200
+      , minSpriteSize: 8
+      , maxSpriteSize: 12
+    }
+  </script>
+
+  <style type="text/css">
+    .under-construction {
+      width: 18px;
+      display: inline-block;
+    }
+  </style>
 </head>
