--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,16 @@
-<header class="site-header">
-  <div class="wrapper">
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
-  </div>
+<header class="">
+  <!--
+    <div class="wrapper">
+        <div class="trigger">
+          {% for page in site.pages %}
+            {% if page.title %}
+            <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+            {% endif %}
+          {% endfor %}
+        </div>
+      </nav>
+    </div>
+  -->
+  <div id="start-menu" class="matrix-font"></div>
+  {% include navigation.html %}
 </header>
