Progress on fixing scroll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
     </div>
 
     {% include footer.html %}
-    <div class="matrix-font stream-container" id="left-stream" style="width: 435px; margin-left: 25px; height: 994px;"></div>
-    <div class="matrix font stream-container" id="right-stream" style="width: 435px; margin-left: 25px; height: 994px;"></div>
+    <div class="matrix-font stream-container" id="left-stream"></div>
+    <div class="matrix-font stream-container" id="right-stream"></div>
     <script type="text/javascript">
 
     var letterChanger = function (state, currentObject) {
