Vim is great for tiny changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
       InitializeStreams(rightContainer, options);
 
       var location = document.location.pathname;
-      if (location == '') {
+      if (location == '/') {
         contentBody.empty();
         contentBody.append(
         '<div style="margin-top: 200px; font-size:24px; text-align: center; width: 700px; margin-left: 100px;" class="matrix-font">' +
