Move start menu to proper spot

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     {% include header.html %}
 
     <div class="interior-wrapper">
+      {{ include navigation.html %}
       <div id="content">
         <div id="content-body" class="content-body-class">
           {{ content }}
