Trying to fix the header not working properly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       for (var i = 0; i < listLength; i++) {
         var currentObject = letterList[i];
         var randomId = RandomTextGenerator(6);
-        var randomTime = Math.floor((Math.random() * 2000) + 3000) + i * 1000;
+        var randomTime = Math.floor((Math.random() * 2000) + 3000);
         var currentLetter = currentObject.innerText;
 
         if (!currentObject.id) {
