--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="">
+<header class="empty">
   <!--
     <div class="wrapper">
         <div class="trigger">
@@ -11,4 +11,5 @@
       </nav>
     </div>
   -->
+  &nbsp;
 </header>
