Looking forward to getting jekyll running on ubuntu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
   {% include head.html %}
 
   <body class="exterior-wrapper">
-
-    {% include header.html %}
-
+    <!--
+      {% include header.html %}
+    -->
     <div class="interior-wrapper">
       {{ include navigation.html %}
       <div id="content">
@@ -91,24 +91,24 @@
         contentBody.empty();
         contentBody.append(
         '<div style="margin-top: 200px; font-size:24px; text-align: center; width: 700px; margin-left: 100px;" class="matrix-font">' +
-          '<span data-original="U" class="under-construction">f</span>' +
-          '<span data-original="N" class="under-construction">a</span>' +
-          '<span data-original="D" class="under-construction">d</span>' +
-          '<span data-original="E" class="under-construction">t</span>' +
-          '<span data-original="R" class="under-construction">y</span>' +
+          '<span data-original="U" class="under-construction">.</span>' +
+          '<span data-original="N" class="under-construction">.</span>' +
+          '<span data-original="D" class="under-construction">.</span>' +
+          '<span data-original="E" class="under-construction">.</span>' +
+          '<span data-original="R" class="under-construction">.</span>' +
           '<span>&nbsp;</span>' +
-          '<span data-original="C" class="under-construction">e</span>' +
-          '<span data-original="O" class="under-construction">i</span>' +
-          '<span data-original="N" class="under-construction">u</span>' +
-          '<span data-original="S" class="under-construction">o</span>' +
-          '<span data-original="T" class="under-construction">h</span>' +
-          '<span data-original="R" class="under-construction">j</span>' +
-          '<span data-original="U" class="under-construction">n</span>' +
-          '<span data-original="C" class="under-construction">w</span>' +
-          '<span data-original="T" class="under-construction">q</span>' +
-          '<span data-original="I" class="under-construction">p</span>' +
-          '<span data-original="O" class="under-construction">r</span>' +
-          '<span data-original="N" class="under-construction">s</span>' +
+          '<span data-original="C" class="under-construction">.</span>' +
+          '<span data-original="O" class="under-construction">.</span>' +
+          '<span data-original="N" class="under-construction">.</span>' +
+          '<span data-original="S" class="under-construction">.</span>' +
+          '<span data-original="T" class="under-construction">.</span>' +
+          '<span data-original="R" class="under-construction">.</span>' +
+          '<span data-original="U" class="under-construction">.</span>' +
+          '<span data-original="C" class="under-construction">.</span>' +
+          '<span data-original="T" class="under-construction">.</span>' +
+          '<span data-original="I" class="under-construction">.</span>' +
+          '<span data-original="O" class="under-construction">.</span>' +
+          '<span data-original="N" class="under-construction">.</span>' +
           '</div>'
           );
 
