--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <div id="start-menu" class="start-menu-item matrix-font" style="text-transform: uppercase; font-size: 20px;">
   <div id="start-menu-button" class="start-menu-item">
-    <img src="https://raw.githubusercontent.com/Kenneth-Posey/kenneth-posey.github.io/master/images/start-menu-button.png" alt="Start">
+    <img src="http://i.imgur.com/n9QWkc8.png" alt="Start">
   </div>
   <div id="start-menu-bar">
   </div>
