lernd 2 us teh "jekyll build" 4 gr8 suces
In all seriousness, running "jekyll build" on a whim in the project
directory allowed me to find the bug

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,11 @@
   {% include head.html %}
 
   <body class="exterior-wrapper">
-    <!--
+    
       {% include header.html %}
-    -->
+
     <div class="interior-wrapper">
-      {{ include navigation.html %}
+      {% include navigation.html %}
       <div id="content">
         <div id="content-body" class="content-body-class">
           {{ content }}
