--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="{{ "/css/matrix_font/matrix_font.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/oldmain.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/structure.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
@@ -16,6 +18,7 @@
 
   <script src="/javascript/jquery.jquery-scroll.js"></script>
   <link rel="stylesheet" href="/css/jquery.jquery-scroll.css">
+
 
   <script type="text/javascript">
     // Default stream settings
