Test new submenu structure

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,6 +3,21 @@
     <img src="http://i.imgur.com/n9QWkc8.png" alt="Start">
   </div>
   <div id="start-menu-display">
+    {% for category in site.categories %}
+    <div class="sub-menu" id="#{{ category | first }}">
+        {% for posts in category %}
+        <ul>
+          {% for post in posts %}
+          <li>
+            <a href="{{ post.url }}" class="start-menu-link start-menu-item">
+              {{ post.title | strip_newlines }}
+            </a>
+          </li>
+          {% endfor %}
+        </ul>
+        {% endfor %}
+    </div>
+    {% endfor %}
     <ul id="start-menu-list">
       <li class="start-menu-item">
         <a href="/" id="home-link">Home</a>
@@ -12,24 +27,8 @@
         <a href="#" name="{{ category | first }}" class="start-menu-link">
           {{ category | first }}
         </a>
-        {% for posts in category %}
-        <ul class="sub-menu">
-          {% for post in posts %}
-            {% if post.url %}
-              <li>
-                <a href="{{ post.url }}" class="start-menu-link start-menu-item">
-                  {{ post.title | strip_newlines }}
-                </a>
-              </li>
-            {% endif %}
-          {% endfor %}
-        </ul>
-        {% endfor %}
       </li>
       {% endfor %}
     </ul>
-  </div>
-  <div class="sub-menu-display">
-
   </div>
 </div>
