Add styling for sub menu

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,17 +5,19 @@
   <div id="start-menu-display">
     {% for category in site.categories %}
     <div class="sub-menu" id="#{{ category | first }}">
-        {% for posts in category %}
-        <ul>
-          {% for post in posts %}
-          <li>
-            <a href="{{ post.url }}" class="start-menu-link start-menu-item">
-              {{ post.title | strip_newlines }}
-            </a>
-          </li>
-          {% endfor %}
-        </ul>
+      {% for posts in category %}
+      <ul>
+        {% for post in posts %}
+        {% if post.url %}
+        <li>
+          <a href="{{ post.url }}" class="start-menu-link start-menu-item">
+            {{ post.title | strip_newlines }}
+          </a>
+        </li>
+        {% endif %}
         {% endfor %}
+      </ul>
+      {% endfor %}
     </div>
     {% endfor %}
     <ul id="start-menu-list">
